better button style. Have to wrap button in a section to deal with chrome button bugs

--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -56,7 +56,7 @@ section, div
   align-items: center
   overflow-y: scroll
   padding: 5px
-  height: 100%
+  //height: 100%
   h2
     border-bottom: 1px solid grey
     display: inline-block
@@ -66,13 +66,16 @@ section, div
   .feed-content-list
     margin-bottom: 15px
   .feed-content-loadmore  // "Load More" button
-    display: inline-block
+    display: block
+    width: 100px
+    line-height: 30px
+    font-size: 16px
+    margin-bottom: 15px
     background: lightblue
     padding: 3px
-    line-height: 30px
+    //line-height: 40px
     border: 1px solid grey
     border-radius: 5px
-    cursor: pointer
 
 .feed-nav-item
   display: flex
